Allow topbar logo click when scrolled on new nav

--- a/src/app/common/layout/sidebar-more/sidebar-more-trigger/sidebar-more-trigger.component.html
+++ b/src/app/common/layout/sidebar-more/sidebar-more-trigger/sidebar-more-trigger.component.html
@@ -20,4 +20,4 @@
   ></m-sidebarMore>
 </popper-content>
 
-<div class="minds-bg-overlay" *ngIf="shown" (click)="shown = false"></div>
+<div class="minds-bg-overlay" *ngIf="shown" (click)="show(false)"></div>
