WIP Discovery on register experiment

--- a/src/app/modules/discovery/trends/trend/trend.component.html
+++ b/src/app/modules/discovery/trends/trend/trend.component.html
@@ -1,4 +1,5 @@
 <div class="m-goBack">
+  <!-- ojm dont totally understand, seems like this is going to home? -->
   <a
     [routerLink]="shouldBeDiscoveryHomepage() ? '/' : '../..'"
     [queryParams]="{ reload: false }"
