Newsfeed Top/Latest #4998

--- a/src/app/common/components/tooltip/tooltip.component.html
+++ b/src/app/common/components/tooltip/tooltip.component.html
@@ -12,6 +12,9 @@
     [style.top.px]="useParentPosition ? offsetTop : false"
     [style.right.px]="useParentPosition ? offsetRight : false"
     [style.left.px]="useParentPosition ? offsetLeft : false"
+    [class.m-tooltip--bubble--anchor-top]="
+      !useParentPosition && anchor == 'top'
+    "
     [class.m-tooltip--bubble--anchor-bottom]="
       !useParentPosition && anchor == 'bottom'
     "
@@ -26,6 +29,7 @@
     <div
       *ngIf="showArrow"
       class="m-tooltip__triangle"
+      [class.m-tooltip__triangle--top]="anchor === 'top'"
       [style.right.px]="
         anchor === 'top' || anchor === 'bottom' ? triangleOffset : undefined
       "
