YT Migrator UI change to reflect rich embed post system #2197

--- a/src/app/modules/media/youtube-migration/youtube-migration.component.ng.scss
+++ b/src/app/modules/media/youtube-migration/youtube-migration.component.ng.scss
@@ -19,6 +19,10 @@
       color: #ff0000;
       font-size: 42px;
       margin-right: 18px;
+      background: white;
+      padding: 0 5px;
+      border-radius: 10px;
+      font-size: 1.5em;
     }
     > span {
       display: inline-block;
