--- a/src/app/modules/homepage/container.component.html
+++ b/src/app/modules/homepage/container.component.html
@@ -1,13 +1,12 @@
-<m-homepage__v2></m-homepage__v2>
-<!-- <m-defaultFeed__container
+<m-defaultFeed__container
   *ngIf="isGuestMode; else notGuestMode"
-></m-defaultFeed__container> -->
+></m-defaultFeed__container>
 <!-- <m-discovery *ngIf="isGuestMode; else notGuestMode">
   <m-discovery__trends
     [showTabs]="false"
     [showChannels]="false"
   ></m-discovery__trends>
-</m-discovery>
+</m-discovery> -->
 <ng-template #notGuestMode>
   <m-homepage__v2></m-homepage__v2>
-</ng-template> -->
+</ng-template>
