--- a/src/app/modules/discovery/discovery.component.html
+++ b/src/app/modules/discovery/discovery.component.html
@@ -22,11 +22,11 @@
           *ngIf="!isPlusPage"
         ></m-language__sidebarPrompt>
         <m-discovery__disclaimer *ngIf="!isPlusPage"></m-discovery__disclaimer>
-        <m-suggestions__sidebar
+        <!-- <m-suggestions__sidebar
           *ngIf="discoveryRedirectExperiment.shouldUseExperiment()"
           type="user"
           customTitle="popular_channels"
-        ></m-suggestions__sidebar>
+        ></m-suggestions__sidebar> -->
         <m-discovery__sidebarTags
           *ngIf="!isPlusPage"
         ></m-discovery__sidebarTags>
