(feat): Moved quality score number formatting to component business logic

--- a/src/app/common/components/quality-score/quality-score.component.html
+++ b/src/app/common/components/quality-score/quality-score.component.html
@@ -15,7 +15,7 @@
         [style.--score-color]="color"
         *ngIf="!inProgress"
       >
-        {{ qualityScore * 100 | number: '1.0' }}
+        {{ qualityScore | number: '1.0' }}
       </div>
     </li>
   </ul>
