Add a loading spinner

--- a/src/app/modules/media/youtube-migration/config/config.component.html
+++ b/src/app/modules/media/youtube-migration/config/config.component.html
@@ -56,5 +56,6 @@
         >Disconnect YouTube Account</a
       >
     </p>
+    <m-loadingSpinner [inProgress]="inProgress"></m-loadingSpinner>
   </div>
 </ng-container>
