TOS update for token manipulation minds#2922

--- a/src/app/modules/report/marketing/marketing.component.html
+++ b/src/app/modules/report/marketing/marketing.component.html
@@ -112,7 +112,6 @@
       </li>
       <li>Personal and confidential information (doxxing)</li>
       <li>Malware</li>
-      <li>Token manipulation</li>
       <li>Impersonation</li>
       <li>Incites a true threat of violence</li>
     </ul>
@@ -155,8 +154,9 @@
       appear more popular than they are; Coordinated activity, that attempts to
       artificially influence opinion through the use of multiple accounts, fake
       accounts, and/or scripting or automation In most cases, spam will result
-      in a strike for your channel. In cases where the behavior is deemed to be
-      malicious or harmful, the account will result in an immediate ban.
+      in a strike for your channel. In cases where token manipulation by means
+      of inauthentic engagement is identified, withdrawals will be rejected
+      without refund as per the Terms of Service.
     </p>
 
     <div class="m-reportMarketing__stats">
