--- a/src/app/modules/comments/poster/poster.component.html
+++ b/src/app/modules/comments/poster/poster.component.html
@@ -29,8 +29,7 @@
             (ascendingInProgress || descendingInProgress) &&
             attachment.hasFile()
           "
-          (keyup)="keyup($event)"
-          (click)="updateCaretPosition()"
+          (keyup)="getPostPreview(content)"
           (keypress)="keypress($event)"
           (keydown)="keydown($event)"
           [placeholder]="
@@ -61,11 +60,6 @@
     <!-- --------------------- -->
     <div class="mdl-card__actions m-commentPoster__actions">
       <div>
-        <m-emojiPicker
-          *ngIf="!isMobile()"
-          (emojiSelect)="onEmoji($event)"
-        ></m-emojiPicker>
-
         <!-- Dropdown meatball -->
         <div class="m-dropdown--v2">
           <div
