--- a/src/app/modules/report/marketing/marketing.component.html
+++ b/src/app/modules/report/marketing/marketing.component.html
@@ -153,7 +153,7 @@
       methods; Inauthentic engagements, that try to make channels or content
       appear more popular than they are; Coordinated activity, that attempts to
       artificially influence opinion through the use of multiple accounts, fake
-      accounts, and/or scripting or automation In most cases, spam will result
+      accounts, and/or scripting or automation. In most cases, spam will result
       in a strike for your channel. In cases where token manipulation by means
       of inauthentic engagement is identified, withdrawals will be rejected
       without refund as per the Terms of Service.
