--- a/src/app/modules/newsfeed/activity/content/content.component.html
+++ b/src/app/modules/newsfeed/activity/content/content.component.html
@@ -103,7 +103,7 @@
         service.displayOptions.autoplayVideo &&
         !(service.shouldShowPaywall$ | async)
       "
-      [style.height]="isModal ? 'unset' : videoHeight"
+      [style.height]="isModal ? null : videoHeight"
       [isModal]="isModal"
       [style.overflow]="videoHeight && !isModal ? 'hidden' : null"
     ></m-videoPlayer--scrollaware>
