--- a/src/app/modules/newsfeed/activity/content/content.component.ng.scss
+++ b/src/app/modules/newsfeed/activity/content/content.component.ng.scss
@@ -34,7 +34,8 @@
     cursor: pointer;
   }
 
-  .m-activityContent__media--video {
+  .m-activityContent__media--video--modal {
     width: 100%;
+    height: 100%;
   }
 }
