(fix): ensure change detection fire through to child components

--- a/src/app/modules/newsfeed/activity/modal/modal.component.html
+++ b/src/app/modules/newsfeed/activity/modal/modal.component.html
@@ -56,7 +56,11 @@
             }"
           >
             <m-activity__content
-              *ngIf="!isQuote && (activityService.shouldShowContent$ | async)"
+              *ngIf="
+                !isQuote &&
+                (activityService.shouldShowContent$ | async) &&
+                isContentReady
+              "
               [hideText]="
                 entity.content_type !== 'status' &&
                 entity.activity_type !== 'rich-embed' &&
