Fix issue preventing videos from being shown in modals #5250

--- a/src/app/modules/newsfeed/activity/content/content.component.ng.scss
+++ b/src/app/modules/newsfeed/activity/content/content.component.ng.scss
@@ -33,4 +33,9 @@
   .m-activityContent__message {
     cursor: pointer;
   }
+
+  .m-activityContent__media--video--modal {
+    width: 100%;
+    height: 100%;
+  }
 }
