--- a/src/app/modules/newsfeed/activity/content/content.component.html
+++ b/src/app/modules/newsfeed/activity/content/content.component.html
@@ -91,7 +91,10 @@
     class="m-activityContent__media--video"
     #mediaEl
     *ngIf="isVideo"
-    [ngClass]="{ isPaywall: service.shouldShowPaywall$ | async }"
+    [ngClass]="{
+      isPaywall: service.shouldShowPaywall$ | async,
+      'm-activityContent__media--video--modal': isModal
+    }"
   >
     <div class="m-activityContent__fixedHeightSpacer"></div>
 
@@ -103,9 +106,9 @@
         service.displayOptions.autoplayVideo &&
         !(service.shouldShowPaywall$ | async)
       "
-      [style.height]="videoHeight"
+      [style.height]="isModal ? null : videoHeight"
       [isModal]="isModal"
-      [style.overflow]="videoHeight ? 'hidden' : null"
+      [style.overflow]="videoHeight && !isModal ? 'hidden' : null"
     ></m-videoPlayer--scrollaware>
 
     <div class="m-activityContent__fixedHeightSpacer"></div>
