better comments height management

--- a/src/app/modules/comments/comment/comment.component.html
+++ b/src/app/modules/comments/comment/comment.component.html
@@ -62,8 +62,7 @@
           <span
             class="m-comment__timestamp m-commentOwnerRowItem__timestamp"
             [title]="comment.time_created * 1000 | date: 'medium'"
-            *ngIf="commentAge$ | async as commentAge"
-            >{{ commentAge | friendlydatediff }}</span
+            >{{ commentAge$ | async | friendlydatediff }}</span
           >
           <ng-container *ngIf="comment.edited">
             <span class="m-commentOwnerRow__dot">·</span>
@@ -590,6 +589,7 @@
       [canEdit]="canEdit"
       [canDelete]="canDelete"
       [showReplies]="showReplies"
+      (onHeightChange)="onHeightChange.emit($event)"
       *ngIf="comment.can_reply && showReplies"
     >
     </m-comments__thread>
