--- a/src/app/modules/newsfeed/activity/activity.component.html
+++ b/src/app/modules/newsfeed/activity/activity.component.html
@@ -71,6 +71,7 @@
       [canDelete]="canDelete$ | async"
       [showOnlyPoster]="service.displayOptions.showOnlyCommentsInput"
       [fixedHeight]="service.displayOptions.fixedHeight"
+      (onHeightChange)="onCommentsHeightChange($event)"
     >
     </m-comments__entityOutlet>
   </ng-container>
