--- a/src/app/modules/comments/comment/comment.component.ng.scss
+++ b/src/app/modules/comments/comment/comment.component.ng.scss
@@ -9,6 +9,7 @@
   }
   .m-comment--compact {
     padding: 5px 30px 20px;
+
     .m-dropdown--v2 {
       margin-right: 0;
     }
@@ -18,7 +19,6 @@
     .m-commentOwnerRow__text {
       flex-direction: column;
       align-items: flex-start;
-      max-width: calc(100% - 50px);
 
       > div {
         display: flex;
@@ -28,9 +28,10 @@
 
       .m-commentOwnerRowItem__name,
       .m-commentOwnerRowItem__username {
-        max-width: 50%;
+        max-width: 70%;
       }
     }
+
     .minds-body {
       max-width: 100%;
       margin-left: 10px;
@@ -279,6 +280,7 @@
   }
 
   .m-comment__timestamp {
+    min-height: 20px;
     @include m-theme() {
       color: themed($m-textColor--tertiary);
     }
