--- a/src/app/modules/newsfeed/activity/modal/modal.component.html
+++ b/src/app/modules/newsfeed/activity/modal/modal.component.html
@@ -128,6 +128,7 @@
           >
             <div
               class="m-activityModal__scrollableAreaBody m-disableScrollbars"
+              #commentsScroll
             >
               <!-- MESSAGE -->
               <m-activity__content
@@ -153,6 +154,7 @@
                     [fixedHeight]="false"
                     [showOnlyPoster]="false"
                     [compact]="true"
+                    (onHeightChange)="onCommentsHeightChange($event)"
                   >
                   </m-comments__entityOutlet>
                 </ng-container>
