Update login topbar buttons

--- a/src/app/common/layout/v3-topbar/v3-topbar.component.html
+++ b/src/app/common/layout/v3-topbar/v3-topbar.component.html
@@ -62,26 +62,57 @@
 
       <div class="m-v3Topbar__rightColumn">
         <ng-container *ngIf="!onAuthPages && !getCurrentUser()">
-          <div class="m-v3TopbarContainer__loginWrapper">
-            <a
-              class="m-v3TopbarLoginWrapper__login"
-              (click)="onLoginClick()"
-              title="Login"
-              i18n-title="@@COMMON__LOGIN"
-              data-ref="topnav-login"
-            >
-              Login
-            </a>
+          <div
+            class="m-v3TopbarContainer__loginWrapper"
+            [ngClass]="{
+              'm-v3TopbarContainer__loginWrapper--roundButtons': !onHomepage
+            }"
+          >
+            <ng-container *ngIf="!onHomepage">
+              <m-button
+                class="m-v3TopbarLoginWrapper__login"
+                (onAction)="onLoginClick()"
+                title="Login"
+                i18n-title="@@COMMON__LOGIN"
+                data-ref="topnav-login"
+                size="small"
+              >
+                Login
+              </m-button>
 
-            <a
-              class="m-v3TopbarLoginWrapper__joinMindsNow"
-              (click)="onJoinNowClick()"
-              title="Join Minds Now"
-              i18n-title="@@COMMON__JOIN_MINDS_NOW"
-              data-ref="topnav-join-now"
-            >
-              Join Now
-            </a>
+              <m-button
+                class="m-v3TopbarLoginWrapper__joinMindsNow"
+                (onAction)="onJoinNowClick()"
+                title="Join Minds Now"
+                i18n-title="@@COMMON__JOIN_MINDS_NOW"
+                data-ref="topnav-join-now"
+                color="blue"
+                size="small"
+              >
+                Join Now
+              </m-button>
+            </ng-container>
+            <ng-container *ngIf="onHomepage">
+              <a
+                class="m-v3TopbarLoginWrapper__login"
+                (click)="onLoginClick()"
+                title="Login"
+                i18n-title="@@COMMON__LOGIN"
+                data-ref="topnav-login"
+              >
+                Login
+              </a>
+              <a
+                class="m-v3TopbarLoginWrapper__joinMindsNow"
+                (click)="onJoinNowClick()"
+                title="Join Minds Now"
+                i18n-title="@@COMMON__JOIN_MINDS_NOW"
+                data-ref="topnav-join-now"
+                color="blue"
+              >
+                Join Now
+              </a>
+            </ng-container>
           </div>
         </ng-container>
 
