Add in staging mode env flag #5254

--- a/src/app/common/layout/v3-topbar/v3-topbar.component.html
+++ b/src/app/common/layout/v3-topbar/v3-topbar.component.html
@@ -40,7 +40,7 @@
             class="m-v3Topbar__logo--full"
           />
         </a>
-        <m-canaryFlag></m-canaryFlag>
+        <m-environmentFlag></m-environmentFlag>
         <div
           class="m-v3TopbarNav__item m-v3TopbarNav__item--hamburger"
           (click)="toggleSidebarNav()"
