--- a/src/app/common/layout/v3-topbar/v3-topbar.component.scss
+++ b/src/app/common/layout/v3-topbar/v3-topbar.component.scss
@@ -251,7 +251,7 @@
   flex-direction: row;
   align-items: flex-end;
 
-  m-canaryFlag > span {
+  m-environmentFlag > span {
     @media screen and (max-width: $layoutMax3ColWidth) {
       display: none;
     }
