--- a/src/app/common/components/environment-flag/environment-flag.component.ng.scss
+++ b/src/app/common/components/environment-flag/environment-flag.component.ng.scss
@@ -1,7 +1,7 @@
 @import 'defaults.scss';
 
 :host {
-  .m-v3TopbarNav__canaryFlag {
+  .m-environmentFlag__flag {
     border-radius: 2px;
     margin-left: 8px;
     padding: 2px 6px;
