--- a/src/app/common/layout/sidebar/navigation.component.ng.scss
+++ b/src/app/common/layout/sidebar/navigation.component.ng.scss
@@ -104,6 +104,8 @@
 
         a {
           text-decoration: none;
+          display: flex;
+          align-items: end;
 
           & > img {
             height: 36px;
