--- a/src/app/modules/discovery/trends/trends.component.html
+++ b/src/app/modules/discovery/trends/trends.component.html
@@ -1,5 +1,9 @@
 <m-discovery__tabs *ngIf="showTabs"></m-discovery__tabs>
-<m-loadingSpinner [inProgress]="inProgress$ | async"> </m-loadingSpinner>
+<m-loadingSpinner
+  *ngIf="!showDiscoveryForYouExperiment()"
+  [inProgress]="inProgress$ | async"
+>
+</m-loadingSpinner>
 
 <m-discovery__noTagsPrompt
   *ngIf="showNoTagsPrompt$ | async"
@@ -9,38 +13,48 @@
 
 <m-discovery__buildYourAlgorithm> </m-discovery__buildYourAlgorithm>
 
-<ul
-  class="m-discovery__trends"
-  @fastFade
-  *ngIf="(trends$ | async).length > 0 || (hero$ | async)"
-  [ngClass]="{ noBorderTop: !showTabs }"
->
-  <li
-    class="m-discoveryTrends__trend m-discoveryTrends__trend--hero"
-    *ngIf="hero$ | async"
+<ng-container *ngIf="!showDiscoveryForYouExperiment(); else widerNetworkFeed">
+  <ul
+    class="m-discovery__trends"
+    @fastFade
+    *ngIf="(trends$ | async).length > 0 || (hero$ | async)"
+    [ngClass]="{ noBorderTop: !showTabs }"
   >
-    <m-discoveryTrends__listItem
-      [trend]="hero$ | async"
-    ></m-discoveryTrends__listItem>
-  </li>
-  <li
-    *ngFor="let trend of trends$ | async | slice: 0:1"
-    class="m-discoveryTrends__trend"
-  >
-    <m-discoveryTrends__listItem [trend]="trend"></m-discoveryTrends__listItem>
-  </li>
-  <!-- ---------------------- -->
-  <m-discovery__cardCarousel
-    *ngIf="showChannels"
-    type="suggestions"
-    class="m-discoveryTrends__trend"
-  ></m-discovery__cardCarousel>
-  <!-- ---------------------- -->
-  <li
-    *ngFor="let trend of trends$ | async | slice: 1"
-    class="m-discoveryTrends__trend"
-  >
-    <m-discoveryTrends__listItem [trend]="trend"></m-discoveryTrends__listItem>
-  </li>
-</ul>
-<m-discovery__feedsList *ngIf="showPreferredFeed"></m-discovery__feedsList>
+    <li
+      class="m-discoveryTrends__trend m-discoveryTrends__trend--hero"
+      *ngIf="hero$ | async"
+    >
+      <m-discoveryTrends__listItem
+        [trend]="hero$ | async"
+      ></m-discoveryTrends__listItem>
+    </li>
+    <li
+      *ngFor="let trend of trends$ | async | slice: 0:1"
+      class="m-discoveryTrends__trend"
+    >
+      <m-discoveryTrends__listItem
+        [trend]="trend"
+      ></m-discoveryTrends__listItem>
+    </li>
+    <!-- ---------------------- -->
+    <m-discovery__cardCarousel
+      *ngIf="showChannels"
+      type="suggestions"
+      class="m-discoveryTrends__trend"
+    ></m-discovery__cardCarousel>
+    <!-- ---------------------- -->
+    <li
+      *ngFor="let trend of trends$ | async | slice: 1"
+      class="m-discoveryTrends__trend"
+    >
+      <m-discoveryTrends__listItem
+        [trend]="trend"
+      ></m-discoveryTrends__listItem>
+    </li>
+  </ul>
+  <m-discovery__feedsList *ngIf="showPreferredFeed"></m-discovery__feedsList>
+</ng-container>
+
+<ng-template #widerNetworkFeed>
+  <m-discovery__feedsList [widerNetwork]="true"></m-discovery__feedsList>
+</ng-template>
