Adding spaces to make sure errors are padded

--- a/src/app/modules/settings-v2/account/password/password.component.html
+++ b/src/app/modules/settings-v2/account/password/password.component.html
@@ -70,13 +70,13 @@
           *ngIf="this.form.get('newPassword').errors?.invalidPassword"
           i18n="@@MINDS__REGISTER__EXCEPTION__INVALID_PASSWORD"
         >
-          Invalid password
+          Invalid password.&nbsp;
         </ng-container>
         <ng-container
           *ngIf="this.form.get('newPassword').errors?.passwordSecurityFailed"
           i18n="@@MINDS__REGISTER__EXCEPTION__PASSWORD_SECURITY_CHECK_FAILED"
         >
-          Passwords security check failed
+          Password security check failed.&nbsp;
         </ng-container>
       </div>
     </div>
