--- a/src/app/modules/forms/register/register.html
+++ b/src/app/modules/forms/register/register.html
@@ -151,13 +151,13 @@
           *ngIf="this.form.get('password').errors?.invalidPassword"
           i18n="@@MINDS__REGISTER__EXCEPTION__INVALID_PASSWORD"
         >
-          Invalid password
+          Invalid password.&nbsp;
         </ng-container>
         <ng-container
           *ngIf="this.form.get('password').errors?.passwordSecurityFailed"
           i18n="@@MINDS__REGISTER__EXCEPTION__PASSWORD_SECURITY_CHECK_FAILED"
         >
-          Passwords security check failed
+          Password security check failed.&nbsp;
         </ng-container>
       </div>
     </div>
