remove flag: buy-tokens-uniswap-transak

--- a/src/app/modules/upgrades/buy-tokens.component.html
+++ b/src/app/modules/upgrades/buy-tokens.component.html
@@ -14,17 +14,8 @@
       </p>
     </div>
 
-    <m-button
-      *mIfFeature="'buy-tokens-uniswap-transak'; else legacyPurchase"
-      (onAction)="openBuyTokens($event)"
-      overlay="true"
+    <m-button (onAction)="openBuyTokens($event)" overlay="true"
       >Buy tokens</m-button
     >
-
-    <ng-template #legacyPurchase>
-      <m-blockchain--purchase
-        class="m-upgradesBuyTokens__purchase"
-      ></m-blockchain--purchase>
-    </ng-template>
   </div>
 </div>
