--- a/src/app/modules/settings-v2/account/boosted-content/boosted-content.component.html
+++ b/src/app/modules/settings-v2/account/boosted-content/boosted-content.component.html
@@ -163,7 +163,7 @@
     <!-- ------------------------------------ -->
     <!-- LIQUIDITY SPOT CONTENT -->
     <!-- ------------------------------------ -->
-    <div class="m-form__field--radio" *mIfFeature="'liquidity-spot'">
+    <div class="m-form__field--radio">
       <div class="m-form__row--label">
         <label i18n="@@BOOSTED_CONTENT__LIQUIDITY_SPOT">Liquidity Spot</label>
         <m-tooltip
