--- a/src/app/common/components/chat-icon/chat-icon.component.html
+++ b/src/app/common/components/chat-icon/chat-icon.component.html
@@ -1,5 +1,5 @@
 <ng-template #iconAndBubble>
-  <m-icon iconId="chat_bubble" [sizeFactor]="nav2021Feature ? 5 : 35"></m-icon>
+  <m-icon iconId="chat_bubble" [sizeFactor]="5"></m-icon>
   <div class="m-chatIcon__unreadBubble" *ngIf="unread > 0">
     <span *ngIf="unread > 99">99+</span>
     <span *ngIf="unread <= 99">{{ unread }}</span>
