--- a/src/app/common/layout/sidebar/navigation.component.html
+++ b/src/app/common/layout/sidebar/navigation.component.html
@@ -47,7 +47,7 @@
             <m-icon
               from="assets-file"
               iconId="assets/icons/compose.svg"
-              [sizeFactor]="nav2021Feature ? 90 : 35"
+              [sizeFactor]="90"
               m-tooltip--icon
             ></m-icon>
             <ng-container>Speak your mind</ng-container>
@@ -77,11 +77,7 @@
             [anchor]="'left'"
             [useParentPosition]="true"
           >
-            <m-icon
-              iconId="home"
-              [sizeFactor]="nav2021Feature ? 8 : 35"
-              m-tooltip--icon
-            ></m-icon
+            <m-icon iconId="home" [sizeFactor]="8" m-tooltip--icon></m-icon
             ><ng-container i18n="@@COMMON__NEWSFEED"
               >Newsfeed</ng-container
             ></m-tooltip
@@ -167,7 +163,7 @@
           >
             <m-icon
               iconId="account_balance"
-              [sizeFactor]="nav2021Feature ? 8 : 35"
+              [sizeFactor]="8"
               m-tooltip--icon
             ></m-icon>
             <ng-container i18n="@@COMMON__WALLET">Wallet</ng-container>
@@ -210,182 +206,6 @@
           </span>
         </a>
       </li>
-      <ng-container *ngIf="!nav2021Feature">
-        <li
-          class="m-sidebarNavigation__item"
-          [routerLinkActive]="'m-sidebarNavigation__item--active'"
-          *ngIf="user"
-        >
-          <a
-            routerLink="/analytics"
-            (click)="toggle()"
-            data-ref="sidenav-analytics"
-          >
-            <m-tooltip
-              icon="insert_chart"
-              [enabled]="false"
-              [anchor]="'left'"
-              [useParentPosition]="true"
-            >
-              <ng-container i18n="@@COMMON__ANALYTICS">Analytics</ng-container>
-            </m-tooltip>
-            <span
-              class="m-sidebarNavigationItem__text m-legible"
-              i18n="@@COMMON__ANALYTICS"
-              >Analytics</span
-            >
-          </a>
-
-          <ul class="m-sidebarNavigation__subnav" m-sidebarNavigation__subnav>
-            <li
-              class="m-sidebarNavigation__item"
-              [routerLinkActive]="'m-sidebarNavigation__item--active'"
-            >
-              <a
-                routerLink="/analytics/dashboard/traffic"
-                (click)="toggle()"
-                i18n="@@COMMON__TRAFFIC"
-                data-ref="sidenav-analytics-traffic"
-                >Traffic</a
-              >
-            </li>
-            <li
-              class="m-sidebarNavigation__item"
-              [routerLinkActive]="'m-sidebarNavigation__item--active'"
-            >
-              <a
-                routerLink="/analytics/dashboard/token"
-                (click)="toggle()"
-                i18n="@@ANALYTICS__TOKEN"
-                data-ref="sidenav-analytics-token"
-                >Tokens</a
-              >
-            </li>
-            <li
-              class="m-sidebarNavigation__item"
-              [routerLinkActive]="'m-sidebarNavigation__item--active'"
-            >
-              <a
-                routerLink="/analytics/dashboard/engagement"
-                (click)="toggle()"
-                i18n="@@COMMON__ENGAGEMENT"
-                data-ref="sidenav-analytics-engagement"
-                >Engagement</a
-              >
-            </li>
-            <li
-              class="m-sidebarNavigation__item"
-              [routerLinkActive]="'m-sidebarNavigation__item--active'"
-            >
-              <a
-                routerLink="/analytics/dashboard/earnings"
-                (click)="toggle()"
-                i18n="@@COMMON__EARNINGS"
-                data-ref="sidenav-analytics-earnings"
-                >Earnings</a
-              >
-            </li>
-            <li
-              class="m-sidebarNavigation__item"
-              [routerLinkActive]="'m-sidebarNavigation__item--active'"
-            >
-              <a
-                routerLink="/analytics/dashboard/trending"
-                (click)="toggle()"
-                i18n="@@COMMON__TRENDING"
-                data-ref="sidenav-analytics-trending"
-                >Trending</a
-              >
-            </li>
-          </ul>
-        </li>
-        <ng-container *ngIf="!nav2021Feature">
-          <ng-container *ngIf="user">
-            <li
-              class="m-sidebarNavigation__item"
-              [routerLinkActive]="'m-sidebarNavigation__item--active'"
-              [routerLinkActiveOptions]="{ exact: true }"
-            >
-              <a (click)="openEarnModal()" data-ref="sidenav-earn-modal">
-                <m-tooltip
-                  [enabled]="!showLabels"
-                  [anchor]="'left'"
-                  [useParentPosition]="true"
-                >
-                  <i class="material-icons" m-tooltip--anchor>attach_money</i>
-                  <ng-container i18n="@@COMMON__EARN">Earn</ng-container>
-                </m-tooltip>
-
-                <span
-                  class="m-sidebarNavigationItem__text m-legible"
-                  i18n="@@COMMON__EARN"
-                  >Earn</span
-                >
-              </a>
-            </li>
-          </ng-container>
-        </ng-container>
-      </ng-container>
-      <ng-container *ngIf="!nav2021Feature">
-        <ng-container *ngIf="user">
-          <li
-            class="m-sidebarNavigation__item"
-            [routerLinkActive]="'m-sidebarNavigation__item--active'"
-            [routerLinkActiveOptions]="{ exact: true }"
-          >
-            <a (click)="buyTokens()" data-ref="sidenav-buytokens-modal">
-              <m-tooltip
-                [enabled]="!showLabels"
-                [anchor]="'left'"
-                [useParentPosition]="true"
-              >
-                <m-icon
-                  from="custom"
-                  iconId="wallet"
-                  [sizeFactor]="nav2021Feature ? 8 : 35"
-                  m-tooltip--icon
-                ></m-icon>
-                <ng-container i18n="@@COMMON__BUY_CRYPTO"
-                  >Buy Crypto</ng-container
-                >
-              </m-tooltip>
-
-              <span
-                class="m-sidebarNavigationItem__text m-legible"
-                i18n="@@COMMON__BUY_CRYPTO"
-                >Buy Crypto</span
-              >
-            </a>
-          </li>
-        </ng-container>
-      </ng-container>
-      <ng-container *ngIf="!nav2021Feature">
-        <ng-container *ngIf="user">
-          <li
-            class="m-sidebarNavigation__item"
-            [routerLinkActive]="'m-sidebarNavigation__item--active'"
-            [routerLinkActiveOptions]="{ exact: true }"
-          >
-            <a (click)="openBoostModal()" data-ref="sidenav-boost-modal">
-              <m-tooltip
-                [enabled]="!showLabels"
-                [anchor]="'left'"
-                [useParentPosition]="true"
-              >
-                <m-icon iconId="trending_up" m-tooltip--icon></m-icon>
-                <ng-container>Boost your channel</ng-container>
-              </m-tooltip>
-
-              <span
-                class="m-sidebarNavigationItem__text m-legible"
-                i18n="@@COMMON__BOOST"
-                >Boost</span
-              >
-            </a>
-          </li>
-        </ng-container>
-      </ng-container>
-
       <ng-container *ngIf="user">
         <li
           class="m-sidebarNavigation__item m-sidebarNavigation__item--groups"
@@ -402,11 +222,7 @@
               [anchor]="'left'"
               [useParentPosition]="true"
             >
-              <m-icon
-                iconId="group"
-                [sizeFactor]="nav2021Feature ? 8 : 35"
-                m-tooltip--icon
-              ></m-icon>
+              <m-icon iconId="group" [sizeFactor]="8" m-tooltip--icon></m-icon>
               <ng-container i18n="@@COMMON__GROUPS">Groups</ng-container>
             </m-tooltip>
             <span
@@ -418,7 +234,7 @@
         </li>
       </ng-container>
       <li
-        *ngIf="user && nav2021Feature"
+        *ngIf="user"
         class="m-sidebarNavigation__item m-sidebarNavigation__item--user"
         [routerLinkActive]="'m-sidebarNavigation__item--active'"
       >
@@ -436,47 +252,22 @@
           </span>
         </a>
       </li>
-      <ng-container *ngIf="!nav2021Feature">
-        <li
-          [routerLinkActive]="'m-sidebarNavigation__item--active'"
-          class="m-sidebarNavigation__item"
-          *ngIf="user"
-        >
-          <a
-            [routerLink]="[settingsLink]"
-            (click)="toggle()"
-            data-ref="sidenav-settings"
-          >
-            <m-tooltip
-              icon="more_horiz"
-              i18n="@@COMMON__SETTINGS"
-              [enabled]="!showLabels"
-              [anchor]="'left'"
-              [useParentPosition]="true"
-              >Settings</m-tooltip
-            >
-
-            <span
-              class="m-sidebarNavigationItem__text m-legible"
-              i18n="@@COMMON__SETTINGS"
-              >Settings</span
-            >
-          </a>
-        </li></ng-container
-      >
-      <ng-container *ngIf="!user && !nav2021Feature">
+      <!-- Click event is handled by popperjs inside trigger component -->
+      <m-sidebarMore__trigger (toggle)="onSidebarMoreToggle($event)">
         <li
           class="m-sidebarNavigation__item"
           [routerLinkActive]="'m-sidebarNavigation__item--active'"
           [routerLinkActiveOptions]="{ exact: true }"
         >
-          <a (click)="openAuthModal()" data-ref="sidenav-loggedout-more">
+          <a data-ref="sidenav-more">
             <m-tooltip
               [enabled]="!showLabels"
               [anchor]="'left'"
               [useParentPosition]="true"
             >
-              <i class="material-icons" m-tooltip--anchor>more_horiz</i>
+              <i class="material-icons m-icon--more" m-tooltip--anchor
+                >more_horiz</i
+              >
               <ng-container i18n="@@COMMON__MORE">More</ng-container>
             </m-tooltip>
 
@@ -487,44 +278,13 @@
             >
           </a>
         </li>
-      </ng-container>
-      <ng-container *ngIf="nav2021Feature">
-        <!-- Click event is handled by popperjs inside trigger component -->
-        <m-sidebarMore__trigger (toggle)="onSidebarMoreToggle($event)">
-          <li
-            class="m-sidebarNavigation__item"
-            [routerLinkActive]="'m-sidebarNavigation__item--active'"
-            [routerLinkActiveOptions]="{ exact: true }"
-          >
-            <a data-ref="sidenav-more">
-              <m-tooltip
-                [enabled]="!showLabels"
-                [anchor]="'left'"
-                [useParentPosition]="true"
-              >
-                <i class="material-icons m-icon--more" m-tooltip--anchor
-                  >more_horiz</i
-                >
-                <ng-container i18n="@@COMMON__MORE">More</ng-container>
-              </m-tooltip>
-
-              <span
-                class="m-sidebarNavigationItem__text m-legible"
-                i18n="@@COMMON__MORE"
-                >More</span
-              >
-            </a>
-          </li>
-        </m-sidebarMore__trigger>
-      </ng-container>
+      </m-sidebarMore__trigger>
     </ul>
   </nav>
 </div>
 
-<ng-container *mIfFeature="'nav-2021'">
-  <div
-    class="minds-bg-overlay m-sidebarNavigation__overlay"
-    *ngIf="isOpened && layoutMode === 'phone'"
-    (click)="toggle()"
-  ></div>
-</ng-container>
+<div
+  class="minds-bg-overlay m-sidebarNavigation__overlay"
+  *ngIf="isOpened && layoutMode === 'phone'"
+  (click)="toggle()"
+></div>
