remove flag: notifications-v3

--- a/src/app/modules/notifications/flyout.component.html
+++ b/src/app/modules/notifications/flyout.component.html
@@ -1,70 +1,14 @@
-<ng-container *mIfFeature="'notifications-v3'; else v2">
-  <div
-    class="m-notificationsFlyout__scrollable"
-    *ngIf="visible"
-    #scrollableArea
-  >
-    <m-notifications__list
-      [scrollSource]="scrollableArea"
-    ></m-notifications__list>
-  </div>
+<div class="m-notificationsFlyout__scrollable" *ngIf="visible" #scrollableArea>
+  <m-notifications__list
+    [scrollSource]="scrollableArea"
+  ></m-notifications__list>
+</div>
 
-  <div class="m-notificationsFlyout__bottomContainer">
-    <a
-      [routerLink]="['/notifications/v3']"
-      i18n="@@NOTIFICATIONS__FLYOUT__VIEW_ALL_ACTION_V3"
-    >
-      View all notifications
-    </a>
-  </div>
-</ng-container>
-<ng-template #v2>
-  <div
-    class="m-notifications--flyout--wrapper mdl-card mdl-shadow--3dp"
-    [class.m-notificationsFlyout--newNavigation]="newNavigation"
+<div class="m-notificationsFlyout__bottomContainer">
+  <a
+    [routerLink]="['/notifications/v3']"
+    i18n="@@NOTIFICATIONS__FLYOUT__VIEW_ALL_ACTION_V3"
   >
-    <div class="m-notifications--flyout--scrollable-container">
-      <minds-notifications
-        #notifications
-        [loadOnDemand]="true"
-        [hidden]="!visible"
-        [visible]="visible"
-        [useOwnScrollSource]="true"
-        [showTabs]="true"
-        [showShadows]="!newNavigation"
-        [showInfiniteScroll]="true"
-        [showElapsedTime]="newNavigation"
-        limit="12"
-      ></minds-notifications>
-    </div>
-    <div
-      class="m-notificationsFlyout__bottomContainer"
-      *ngIf="newNavigation; else oldBottomContainer"
-    >
-      <a
-        [routerLink]="['/notifications']"
-        (click)="close()"
-        i18n="@@NOTIFICATIONS__FLYOUT__VIEW_ALL_NOTIFS_ACTION"
-      >
-        See All Notifications
-      </a>
-    </div>
-    <ng-template #oldBottomContainer>
-      <div
-        class="
-          m-notifications--flyout--bottom-container
-          mdl-color--blue-grey-50
-          mdl-color-text--blue-grey-200
-        "
-      >
-        <a
-          [routerLink]="['/notifications']"
-          (click)="close()"
-          i18n="@@NOTIFICATIONS__FLYOUT__VIEW_ALL_ACTION"
-        >
-          View all
-        </a>
-      </div>
-    </ng-template>
-  </div>
-</ng-template>
+    View all notifications
+  </a>
+</div>
