(feat): Addressed comments in MR

--- a/src/app/common/components/publisher-card/publisher-card.component.html
+++ b/src/app/common/components/publisher-card/publisher-card.component.html
@@ -34,9 +34,9 @@
             title="{{ publisher.name }}"
             >{{ publisher.name }}</a
           >
-          <m-channel--quality-score
+          <m-accountQualityScore
             [targetUser]="publisher"
-          ></m-channel--quality-score>
+          ></m-accountQualityScore>
           <m-channel--badges
             *ngIf="type === 'user'"
             class="m-channel--badges-activity"
