remove flag: paywall-2020

--- a/src/app/modules/channels/v2/channel.component.html
+++ b/src/app/modules/channels/v2/channel.component.html
@@ -38,7 +38,7 @@
             >
           </div>
 
-          <div class="m-tabs__tab" *mIfFeature="'paywall-2020'">
+          <div class="m-tabs__tab">
             <a
               [routerLink]="['/', username, 'shop']"
               routerLinkActive="m-tabs__tab--selected"
